deploy/cicd/tekton/eap-eks-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: eap-eks
  name: eap-eks
spec:
  rules:
    - host: eap-eks.com
      http:
        paths:
          - backend:
              serviceName: el-eap-eks-git-repo
              servicePort: port-8080
            path: /el-eap-eks-git-repo
            pathType: Prefix
status:
  loadBalancer: {}
